tests/NormalTests/paczka1/fuzzy1/89242066.err
Error in line 1: hHiyj8exA A0 71,7
Error in line 2: 6JmUP A0 22,3
Error in line 4: hHiyj8exA A0 2,9
Error in line 9: A197 A0 91,0
Error in line 20: hHiyj8exA A0 42,3
Error in line 21: 16jr0QQI9 A0 81,5
Error in line 22: hHiyj8exA A0 111,7
Error in line 23: A197 A0 334,9
Error in line 31: FtS A0 96,6
Error in line 32: 1mNj A0 99,8
Error in line 36: 16jr0QQI9 A0 2,4
Error in line 38: 1mNj A0 75,3
Error in line 39: 1mNj A0 2104,1
